--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.3",
     "uuid": "^11.0.5",
     "zustand": "^5.0.3"
